--- a/templates/domain/list.html
+++ b/templates/domain/list.html
@@ -49,7 +49,7 @@
                             <ul class="dropdown-menu dropdown-menu-end">
                                 <li>
                                     <a class="dropdown-item" href="{% url 'domain_config' domain.serial %}">
-                                        {% trans 'Server config' %}
+                                        {% trans 'Config' %}
                                         <i class="bi bi-hdd-network float-end"></i>
                                     </a>
                                 </li>
