--- a/templates/domain/list.html
+++ b/templates/domain/list.html
@@ -48,7 +48,7 @@
                             <i class="bi bi-gear fs-4 pointer" data-bs-toggle="dropdown"></i>
                             <ul class="dropdown-menu dropdown-menu-end">
                                 <li>
-                                    <a class="dropdown-item" href="{% url 'domain_config' domain.serial %}">
+                                    <a class="dropdown-item" href="javascript:void(0)" onclick="open_link_confirm('{% url 'domain_config' domain.serial %}', '{% trans 'Config' %}: {{domain.name}}', '{% trans 'Be careful with this action, edit only if you know what you are doing' %}')">
                                         {% trans 'Config' %}
                                         <i class="bi bi-hdd-network float-end"></i>
                                     </a>
