--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -32,6 +32,11 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="{% url 'files' %}">
+                                {% trans 'Files' %}
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="{% url 'settings' %}">
                                 {% trans 'Settings' %}
                             </a>
