--- a/templates/app/list.html
+++ b/templates/app/list.html
@@ -75,7 +75,7 @@
                             <i class="bi bi-gear fs-4 pointer" data-bs-toggle="dropdown"></i>
                             <ul class="dropdown-menu dropdown-menu-end">
                                 <li>
-                                    <a class="dropdown-item" href="{% url 'app_log' app.serial %}" >
+                                    <a class="dropdown-item" href="javascript:void(0)" onclick="dPanelPopup('{% url 'app_log' app.serial %}')">
                                         {% trans 'Log' %}
                                         <i class="bi bi-file-text float-end"></i>
                                     </a>
