--- a/templates/file/preview.html
+++ b/templates/file/preview.html
@@ -1,11 +1,6 @@
-{% extends "base.html" %}
 {% load i18n %}
 {% load static %}
-
-{% block title %} {% trans 'Preview' %} {{filename}} {% endblock %}
-{% block page_title %} {% trans 'Preview' %} {{filename}} {% endblock %}
-
-{% block content %}
+<title>{{filename}}</title>
 <textarea name="text" id="text-review">{{text}}</textarea>
 
 <script src="{% static 'codemirror/codemirror.min.js' %}"></script>
@@ -28,7 +23,7 @@
 <script src="{% static 'codemirror/modes/textile/textile.js' %}"></script>
 {% endif %}
 <script>
-jQuery(document).ready(function() {
+document.addEventListener("DOMContentLoaded", function() {
     CodeMirror.fromTextArea(document.getElementById('text-review'), {
         theme: 'monokai',
         lineNumbers : true,
@@ -55,6 +50,20 @@ jQuery(document).ready(function() {
 });
 </script>
 <style>
-    div.CodeMirror{height: 70vh}
+    div.CodeMirror{
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+    }
+    .save-btn{
+        position: fixed;
+        bottom: 10px;
+        right: 10px;
+        background-color: #000000;
+        color: white;
+        padding: 5px 10px;
+        cursor: pointer;
+    }
 </style>
-{% endblock %}
