--- a/templates/mysql/table.html
+++ b/templates/mysql/table.html
@@ -2,14 +2,10 @@
 {% load i18n %}
 
 {% block title %} MySql - {{database.name}}{% endblock %}
-{% block page_title %}<a href="{% url 'mysql_databases' %}">MySQL</a> - <a href="{% url 'mysql_database' database.serial %}">{{database.name}}</a> - <a href="{% url 'mysql_database_manage' database.serial %}">{% trans 'manage' %}</a>{% endblock %}
-
-
-{% block title_button %}
-{% include 'mysql/action.html' %}
-{% endblock %}
+{% block page_title %}<a href="{% url 'mysql_databases' %}">MySQL</a> - <a href="{% url 'mysql_database' database.serial %}">{{database.name}}</a> - <a href="{% url 'mysql_database_manage' database.serial %}">{% trans 'manage' %} {% trans '(beta)' %}</a>{% endblock %}
 
 {% block content %}
+{{table_data}}
 <div class="bg-white shadow-sm p-3 rounded mb-3">
     <table class="table">
         <thead>
@@ -22,8 +18,8 @@
         <tbody>
         {% for row in table_data %}
         <tr>
-            {% for key, value in row.items %}
-                <td>{{ value }}</td>
+            {% for value in row %}
+                <td><input value="{{value}}" readonly class="form-control form-control-sm border-0 shadow-none"></td>
             {% endfor %}
         </tr>
         {% endfor %}
