--- a/templates/mysql/action.html
+++ b/templates/mysql/action.html
@@ -5,12 +5,14 @@
     <input type="file" name="sql_file" id="backup-import-{{database.serial}}" class="backup-import" accept=".sql,.sql.gz" required hidden>
 </form>
 <div class="dropdown d-inline">
-    <i class="bi bi-three-dots-vertical float-end pointer" data-bs-toggle="dropdown"></i>
+    <a href="javascript:void(0)" class="btn btn-light btn-sm border rounded-pill dropdown-toggle" data-bs-toggle="dropdown">
+        {% trans 'Manage' %}
+    </a>
     <ul class="dropdown-menu dropdown-menu-end mw-100" style="min-width: 250px">
         <li>
             <a href="{% url 'mysql_database_manage' database.serial %}" class="dropdown-item">
-                {% trans 'Manage' %}
-                <i class="bi bi-database-gear float-end"></i>
+                {% trans 'Preview' %}
+                <i class="bi bi-eye float-end"></i>
             </a>
         </li>
         <li><div class="dropdown-divider"></div></li>
