--- a/templates/certificate/certificates.html
+++ b/templates/certificate/certificates.html
@@ -5,46 +5,17 @@
 {% block title %} {{domain}} - {% trans 'SSL certificates' %} {% endblock %}
 {% block page_title %} {{domain}} - {% trans 'SSL certificates' %} {% endblock %}
 {% block title_button %}
-<span class="btn btn-primary btn-sm rounded-pill" onclick="open_link_confirm('{% url 'certificate_new' domain.serial %}')">
+<a href="javascript:void(0)" class="btn btn-primary btn-sm rounded-pill" onclick="open_link_confirm('{% url 'certificate_new' domain.serial %}')">
     {% trans 'New certificate' %}
     <i class="bi bi-shield"></i>
-</span>
+</a>
 {% endblock %}
 
 {% block content %}
 <div class="bg-white shadow-sm rounded p-3">
     {% if status.certbot_status %}
         {% if domain.certificates %}
-        <div class="responsive-table-md">
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>{% trans 'Created' %}</th>
-                        <th>{% trans 'Expires' %}</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for certificate in domain.certificates %}
-                    <tr>
-                        <td>
-                            {% if certificate.start_index %}
-                            {{certificate.start_index|add:forloop.counter0}}
-                            {% else %}
-                            {{forloop.counter}}
-                            {% endif %}
-                        </td>
-                        <td>
-                            {{certificate.created_date|date:"Y-m-d H:i, l"}}
-                        </td>
-                        <td>
-                            {{ certificate.expire_date|date:"Y-m-d H:i, l" }}
-                        </td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-        </div>
+        {% include 'certificate/list.html' %}
         {% else %}
         {% trans 'This domain have no certificates yet' %}
         {% endif %}
