Refactor: Install the entire panel from the start instead of per-service installation
Previously, services were installed individually through the control panel. Now, the script installs the full panel, including all dependencies, from the beginning. This ensures a smoother setup process, reduces manual intervention, and improves reliability.

--- a/templates/templates/index.html
+++ b/templates/templates/index.html
@@ -25,26 +25,65 @@
             border-radius: 8px;
         }
         h1 {
-            color: #0078d7;
+            color: #28293c;
         }
         p {
             margin: 10px 0;
         }
         a {
-            color: #0078d7;
+            color: #28293c;
             text-decoration: none;
             font-weight: bold;
         }
         a:hover {
             text-decoration: underline;
         }
+        .powered-btn{
+            position: fixed;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+        }
     </style>
 </head>
 <body>
     <div class="container">
+        <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!-- Created with Inkscape (http://www.inkscape.org/) -->
+
+<svg
+   width="100"
+   height="100"
+   viewBox="0 0 265.267 264.583"
+   version="1.1"
+   id="svg5"
+   xml:space="preserve"
+   xmlns="http://www.w3.org/2000/svg"
+   xmlns:svg="http://www.w3.org/2000/svg"><defs
+     id="defs2"><linearGradient
+       id="linearGradient3356"><stop
+         style="stop-color:#4054b2;stop-opacity:1;"
+         offset="0"
+         id="stop3354" /></linearGradient><linearGradient
+       id="linearGradient3318"><stop
+         style="stop-color:#000000;stop-opacity:1;"
+         offset="0"
+         id="stop3316" /></linearGradient></defs><g
+     id="layer1"
+     transform="translate(-37.999872,-37.999732)"><g
+       id="g11"
+       transform="matrix(1,0,0,0.9999987,0,4.769946e-5)"><path
+         id="path3477"
+         style="fill:#1d1e2c;fill-opacity:1;stroke:none;stroke-width:10;stroke-linecap:round;paint-order:fill markers stroke"
+         d="m 56.999746,37.999735 c -10.493309,7e-5 -18.999801,8.506561 -18.999874,18.999873 7.3e-5,10.493313 8.506565,18.999804 18.999874,18.999874 H 170.64552 v 0.0155 c 0.11798,-0.0054 0.23598,-0.01055 0.35398,-0.0155 52.18084,0.01394 94.58306,42.112528 94.97198,94.291928 -0.38892,52.1794 -42.79114,94.27798 -94.97198,94.29192 -0.118,-0.005 -0.236,-0.0101 -0.35398,-0.0155 v 0.0155 h -37.64576 c -10.49331,7e-5 -18.99981,8.50656 -18.99988,18.99987 7e-5,10.49331 8.50656,18.99981 18.99988,18.99988 h 37.64576 c 72.97372,-0.0125 132.23272,-59.12414 132.62136,-132.29167 -0.12473,-23.48182 -6.31295,-45.51593 -17.07205,-64.61339 C 263.42941,65.26926 220.19962,38.008196 170.64552,37.999735 Z" /><path
+         id="path3498"
+         style="fill:#28293c;fill-opacity:1;stroke:none;stroke-width:10;stroke-linecap:round;paint-order:fill markers stroke"
+         d="m 56.999746,113.99975 c -10.493311,7e-5 -18.999804,8.50656 -18.999874,18.99987 7.2e-5,10.49332 8.506564,18.99981 18.999874,18.99988 H 170.9995 c 10.49332,6e-5 18.99981,8.50656 18.99987,18.99988 2.2e-4,10.49351 -8.50635,19.00032 -18.99987,19.00039 H 95.00001 c -31.48034,-8e-5 -57.000217,25.5198 -57.000138,57.00014 v 36.58329 0.70745 h 0.02635 c 0.38033,10.20583 8.760596,18.28528 18.973519,18.29243 10.212923,-0.007 18.593189,-8.0866 18.973518,-18.29243 h 0.02636 v -0.70745 -36.58329 h 5.17e-4 c -2.19e-4,-10.49352 8.506359,-19.00033 18.999874,-19.00039 h 75.99949 c 31.48034,8e-5 57.00022,-25.5198 57.00014,-57.00014 -2e-4,-31.48014 -25.52,-56.99971 -57.00014,-56.99963 z" /></g></g></svg>
+
         <h1>Welcome to Dpanel</h1>
         <p>Your development environment is set up and ready to go!</p>
         <p>Feel free to explore and manage your applications.</p>
     </div>
+    <a href="https://dpanel.top" class="powered-btn"> Powered by DPanel</a>
 </body>
 </html>
