--- a/templates/inc/scripts.html
+++ b/templates/inc/scripts.html
@@ -175,57 +175,18 @@
 <script>
     jQuery('body').on('click', '#check-updates', function(){
         jQuery('.loading-preloader').show();
-        $.getJSON('https://dpanel.top/api/update/check', function(data){
-            if(data.version > 26){
+        $.getJSON('https://dpanel.top/api/download/check-update', function(data){
+            if(data.version > 27){
                 Swal.fire({
                     title: '{% trans "New version available" %}',
-                    text: '{% trans "Please carefully before updating? please take a backup first" %}',
+                    html: '<a href="https://dpanel.top" target="_blank">dpanel.top</a>',
+                    text: '{% trans "Please go to " %}',
                     icon: 'warning',
-                    showCancelButton: true,
                     confirmButtonColor: '#3085d6',
                     cancelButtonColor: '#d33',
-                    confirmButtonText: '{% trans 'Update' %}',
-                    cancelButtonText: '{% trans 'Cancel' %}',
-                }).then((result) => {
-                    if (result.isConfirmed) {
-                        jQuery('.loading-preloader').show();
-                        jQuery.ajax({
-                            url: '{% url 'dpanel_update' %}',
-                            type: 'POST',
-                            dataType: 'json',
-                            data: {
-                                csrfmiddlewaretoken: '{{csrf_token}}',
-                            },
-                            success: function(data){
-                                jQuery('.loading-preloader').hide();
-                                Swal.fire({
-                                    title: '{% trans "Update successful" %}',
-                                    icon: 'success',
-                                    showCancelButton: false,
-                                    confirmButtonColor: '#3085d6',
-                                    confirmButtonText: '{% trans "Ok" %}',
-                                    allowOutsideClick: false,
-                                }).then((result) => {
-                                    if (result.isConfirmed) {
-                                        window.location.reload();
-                                    }
-                                });
-                            },
-                            error: function(data) {
-                                jQuery('.loading-preloader').hide();
-                                Swal.fire({
-                                    title: '{% trans "Error when updating" %}',
-                                    text: data.message,
-                                    icon: 'error',
-                                    showCancelButton: false,
-                                    confirmButtonColor: '#3085d6',
-                                    confirmButtonText: '{% trans "Ok" %}',
-                                });
-                            },
-                        });
-                    }
+                    confirmButtonText: '{% trans 'Okey' %}',
                 });
-            }else if(data.version == 26){
+            }else if(data.version == 27){
                 Swal.fire({
                     title: '{% trans "You are using the latest version" %}',
                     icon: 'success',
