--- a/templates/file/list.html
+++ b/templates/file/list.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
 <div class="input-group input-group-sm mb-3">
-    <button class="clickable-folder btn btn-light border" data-path="{{app.www_path}}" data-bs-toggle="tooltip" title="{% trans 'Home' %}">
+    <button class="clickable-folder btn btn-light border" data-path="/var/www" data-bs-toggle="tooltip" title="{% trans 'Home' %}">
         <i class="bi bi-house"></i>
     </button>
     <button class="clickable-folder btn btn-light border" data-path="{{parent}}"  data-bs-toggle="tooltip" title="{% trans 'Go to top folder' %}">
